# codelaborate

./: test_server.py
backend/: addEnv.sh  go.mod  go.sum  httpApi.go  main.go
backend/collab/: client.go  collab.go  db.go  filetext.go  msg.go  msgQueue.go  room.go  roomManager.go
client/: .gitignore  CMakeLists.txt  index.html
client/.cache/clangd/index/: editor.cpp.BEDAF4988ABBB222.idx  editor.h.5A7AA9CC119D3114.idx  main.cpp.DE9073000EF04B6A.idx  mainwindow.cpp.0915EF53C140ABDA.idx  mainwindow.h.2E52B317D5015E21.idx  network.cpp.8A5289FE8059CE83.idx  network.h.39E003633354AE92.idx
client/include/: editor.h  mainwindow.h  network.h  protocol.h
client/src/: editor.cpp  main.cpp  mainwindow.cpp  network.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  CodeRoom.tsx  Dashboard.tsx  Login.css  Login.tsx  main.ts
server/: .gitignore  client.go  codelaborate-server  go.mod  logic.go  main.go  msg.go  queue.go  roomadmin.go  roommanager.go  test.py
